headers only need to be responsive now

--- a/pages/sagas.html
+++ b/pages/sagas.html
@@ -32,39 +32,11 @@
   <body>
     <div>
       <header>
-        <div class="finalHeader">
-          <a href="../index.html" class="noBackground"
-            ><img src="../images/icono_libroteca.png" alt="Icono Libroteca"
-          /></a>
-          <div>
-            <h1>SAGAS</h1>
-          </div>
-          <div class="dropdown nav_media">
-            <button
-              class="btn dropdown-toggle miBoton" 
-              type="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              Paginas
-            </button>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="./libros.html" dropdown-item" type="button">Libros</a>
-              </li>
-              <li>
-                <a href="./autores.html" dropdown-item" type="button">Autores</a>
-              </li>
-              <li>
-                <a href="./sagas.html" dropdown-item" type="button">Sagas</a>
-              </li>
-              <li>
-                <a href="./caminodelosreyes.html" dropdown-item" type="button">Libro 10/10</a>
-              </li>
-            </ul>
-          </div>
           <nav>
             <ul>
+              <li><a href="../index.html" class="noBackground"
+                ><img src="../images/icono_libroteca.png" alt="Icono Libroteca"
+              /></a></li>
               <li class="libros"><a href="./libros.html">Libros</a></li>
               <li class="auto"><a href="./autores.html">Autores</a></li>
               <li class="saga"><a href="./sagas.html">Sagas</a></li>
@@ -72,7 +44,31 @@
                 <a href="./caminodelosreyes.html">Libro 10/10</a>
               </li>
             </ul>
+            <h1>SAGAS</h1>
           </nav>
+        <div class="dropdown nav_media">
+          <button
+            class="btn dropdown-toggle miBoton" 
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Paginas
+          </button>
+          <ul class="dropdown-menu">
+            <li>
+              <a href="./libros.html" dropdown-item" type="button">Libros</a>
+            </li>
+            <li>
+              <a href="./autores.html" dropdown-item" type="button">Autores</a>
+            </li>
+            <li>
+              <a href="./sagas.html" dropdown-item" type="button">Sagas</a>
+            </li>
+            <li>
+              <a href="./caminodelosreyes.html" dropdown-item" type="button">Libro 10/10</a>
+            </li>
+          </ul>
         </div>
       </header>
       <main id="sagas">
