finished header in every page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <nav>
             <ul>
               <li><a href="index.html" class="noBackground"
-                ><img src="../images/icono_libroteca.png" alt="Icono Libroteca"
+                ><img src="./images/icono_libroteca.png" alt="Icono Libroteca"
               /></a>
               <div></li>
               <li class="libros"><a href="./pages/libros.html">Libros</a></li>
@@ -60,6 +60,9 @@
               Paginas
             </button>
             <ul class="dropdown-menu">
+              <li>
+                <a href="./index.html" dropdown-item" type="button">Principal</a>
+              </li>
               <li>
                 <a href="./pages/libros.html" dropdown-item" type="button">Libros</a>
               </li>
