--- a/pages/autores.html
+++ b/pages/autores.html
@@ -57,6 +57,9 @@
         </button>
         <ul class="dropdown-menu">
           <li>
+            <a href="../index.html" dropdown-item" type="button">Principal</a>
+          </li>
+          <li>
             <a href="./libros.html" dropdown-item" type="button">Libros</a>
           </li>
           <li>
