finished index for real this time

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div>
@@ -78,6 +81,13 @@
             </ul>
           </div>
       </header>
+      <section>
+        <p>Bienvenidos a LIBROTECA, la pagina numero uno para obtener informacion 
+          acerca de libros, sus autores y las sagas a las que pertenecen. <br>
+        Aqui tambien podras leer las reseñas de otros usuarios de tus libros favoritos y quizas 
+        encontrar algo nuevo para leer.</p>
+        <img src="./images/reading_person.png" alt="Dibujo de una persona leyendo" class="animated">
+      </section>
       <main>
         <div class="indexLibro">
           <div>
