--- a/pages/autores.html
+++ b/pages/autores.html
@@ -74,7 +74,7 @@
         </ul>
       </div>
       </header>
-      <main>
+      <main id="autores">
         <div class="brandon">
           <img
             src="../images/brandon_sanderson.jpg"
@@ -119,9 +119,9 @@
           </p>
 
           <p class="quote">
-            I like living. I have sometimes been wildly, despairingly, acutely
+            "I like living. I have sometimes been wildly, despairingly, acutely
             miserable, racked with sorrow, but through it all I still know quite
-            certainly that just to be alive is a grand thing. <br />
+            certainly that just to be alive is a grand thing." <br />
             -Agatha Christie
           </p>
           <a href="" class="libros">Libros</a>
@@ -166,9 +166,9 @@
             trabajando en su proyecto mas ambicioso "La torre de Ein"
           </p>
           <p class="quote">
-            "En otro tiempo, en otro cuerpo, en otra mente con otros recuerdos.
+            "...En otro tiempo, en otro cuerpo, en otra mente con otros recuerdos.
             Pero el alma se mantiene, muchacho. Me sorprende todo el intelecto
-            que perdiste." <br />
+            que perdiste..." <br />
             -Juan Ignacio Romero
           </p>
           <a href="" class="libros">Libros</a>
