finished caminodlosreyes page, only need to add mixin and map

--- a/pages/caminodelosreyes.html
+++ b/pages/caminodelosreyes.html
@@ -74,7 +74,7 @@
         </ul>
       </div>
       </header>
-      <main>
+      <main id="caminoReyes">
         <div class="infoLibro">
           <img
             src="../images/otros_reyes.jpg"
@@ -95,7 +95,6 @@
             <li>AVENTURA</li>
             <li>FANTASIA DURA</li>
           </ul>
-          <div><h2>TU RATING:</h2></div>
         </div>
         <div class="imagenesLibro">
           <img
