--- a/pages/libros.html
+++ b/pages/libros.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Sitio de reseñas de libros, autores y sagas">
+    <meta name="keywords" content="Libros, sagas, autores, HarryPotter, Cosmere, StormlightArchive, quotes">
     <title>Libroteca</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
