--- a/index.html
+++ b/index.html
@@ -80,34 +80,34 @@
         </div>
       </section>
       <main>
-        <div class="indexLibro">
-          <div>
-          <!--witdh:415 height:640-->
-            <a href="./pages/Caminodelosreyes.html"
-            ><img
-            src="./images/camino_reyes.JPG"
-            alt="Camino de los reyes"
-            class="primeraImg imageLink"
-            title="Click para pagina del libro"
-            /></a>
+          <div class="indexLibro">
+           <div>
+            <!--witdh:415 height:640-->
+              <a href="./pages/Caminodelosreyes.html"
+              ><img
+              src="./images/camino_reyes.JPG"
+              alt="Camino de los reyes"
+              class="primeraImg imageLink"
+              title="Click para pagina del libro"
+              /></a>
+              </div>
+            <div class="parrafoLibro">
+              <p>
+              Este libro, El Camino De Los Reyes, escrito por Brando Sanderson,
+              es una fantasia epica situada en el mundo de Roshar. La historia
+              comienza con el misterioso asesinato del rey de Alezkar y el
+              intento de asesinato de su hija, Jasnah Kholin.
+              </p>
             </div>
-        <div class="parrafoLibro">
-          <p>
-            Este libro, El Camino De Los Reyes, escrito por Brando Sanderson,
-            es una fantasia epica situada en el mundo de Roshar. La historia
-            comienza con el misterioso asesinato del rey de Alezkar y el
-            intento de asesinato de su hija, Jasnah Kholin.
-          </p>
-        </div>
-      </div>
-      <div class="toCenter">
-        <h2>LIBROS</h2>
-        <div id="carouselExampleCaptions" class="carousel slide slider"> 
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
+          <div class="toCenter">
+            <h2>LIBROS</h2>
+            <div id="carouselExampleCaptions" class="carousel slide slider"> 
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="./images/resplandor.jpg" class="d-block w-100" alt="El resplandor portada">
@@ -138,121 +138,117 @@
           </button>
         </div>
       </div>
-<div class="toCenter">
-<h2>AUTORES</h2>
-<div id="carouselExampleCaption" class="carousel slide slider">
-<div class="carousel-indicators">
-<button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-<button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="1" aria-label="Slide 2"></button>
-<button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="2" aria-label="Slide 3"></button>
-<button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="3" aria-label="Slide 4"></button>
-</div>
-<div class="carousel-inner">
-<div class="carousel-item active">
-<img src="./images/agatha_christie.png" class="d-block w-100" alt="Autora Agatha Christie">
-<div class="carousel-caption d-none d-md-block">
-<h5>Agatha Christie</h5>
-</div>
-</div>
-<div class="carousel-item">
-<img src="./images/juan_autor.jpeg" class="d-block w-100" alt="Autor Juan">
-<div class="carousel-caption d-none d-md-block">
-<h5>Juan Romero</h5>
-</div>
-</div>
-<div class="carousel-item">
-<img src="./images/robert_jordan.jpg" class="d-block w-100" alt="Autor Robert Jordan">
-<div class="carousel-caption d-none d-md-block">
-<h5>Robert Jordan</h5>
-</div>
-</div>
-<div class="carousel-item">
-<img src="./images/brandon_sanderson.jpg" class="d-block w-100" alt="Autor Brandon Sanderson">
-<div class="carousel-caption d-none d-md-block">
-<h5>Brandon Sanderson</h5>
-</div>
-</div>
-</div>
-<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaption" data-bs-slide="prev">
-<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-<span class="visually-hidden">Previous</span>
-</button>
-<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaption" data-bs-slide="next">
-<span class="carousel-control-next-icon" aria-hidden="true"></span>
-<span class="visually-hidden">Next</span>
-</button>
-</div>
-</div>
-<div class="toCenter">
-<h2>SAGAS</h2>
-<div id="carouselExampleCaptio" class="carousel slide slider">
-<div class="carousel-indicators">
-<button type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-<button type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide-to="1" aria-label="Slide 2"></button>
-<button type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide-to="2" aria-label="Slide 3"></button>
-<button type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide-to="3" aria-label="Slide 4"></button>
-</div>
-<div class="carousel-inner">
-<div class="carousel-item active">
-<img src="./images/cosmerelogopartenumerodos.jpg" class="d-block w-100" alt="Logo del cosmere">
-<div class="carousel-caption d-none d-md-block">
-<h5>Cosmere</h5>
-</div>
-</div>
-<div class="carousel-item">
-<img src="./images/harry_potter.jpg" class="d-block w-100" alt="Logo Harry Potter">
-<div class="carousel-caption d-none d-md-block">
-<h5>Harry Potter</h5>
-</div>
-</div>
-<div class="carousel-item">
-<img src="./images/mundo_disco.jpg" class="d-block w-100" alt="Mundo disco logo">
-<div class="carousel-caption d-none d-md-block">
-<h5>Mundo disco</h5>
-</div>
-</div>
-<div class="carousel-item">
-<img src="./images/sherlok_holmes.jpg" class="d-block w-100" alt="Sherlock Holmes">
-<div class="carousel-caption d-none d-md-block">
-<h5>Sherlock Holmes</h5>
-</div>
-</div>
-</div>
-<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide="prev">
-<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-<span class="visually-hidden">Previous</span>
-</button>
-<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide="next">
-<span class="carousel-control-next-icon" aria-hidden="true"></span>
-<span class="visually-hidden">Next</span>
-</button>
-</div>
-</div>
-</main>
-<footer>
-<ul>
-<li>
-<a href="https://twitter.com/LautaroZambella" target="_blank"
-><img src="./images/icono_twitter.png" alt="Mi twitter"
-/></a>
-</li>
-<li>
-<a href="https://www.instagram.com/lautarozambella/" target="_blank"
-><img src="./images/icono_instagram.png" alt="Mi instagram"
-/></a>
-</li>
-<li>
-<a href="https://github.com/LautaroZambella" target="_blank"
-><img src="./images/icono_git_hub.png" alt="mi github"
-/></a>
-</li>
-</ul>
-</footer>
-</div>
-<script
-src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-crossorigin="anonymous"
-></script>
-</body>
+      <div class="toCenter">
+        <h2>AUTORES</h2>
+        <div id="carouselExampleCaption" class="carousel slide slider">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaption" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/agatha_christie.png" class="d-block w-100" alt="Autora Agatha Christie">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Agatha Christie</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/juan_autor.jpeg" class="d-block w-100" alt="Autor Juan">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Juan Romero</h5>
+              </div>
+            </div>
+          <div class="carousel-item">
+            <img src="./images/robert_jordan.jpg" class="d-block w-100" alt="Autor Robert Jordan">
+            <div class="carousel-caption d-none d-md-block">
+            <h5>Robert Jordan</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./images/brandon_sanderson.jpg" class="d-block w-100" alt="Autor Brandon Sanderson">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Brandon Sanderson</h5>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaption" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span></button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaption" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span></button>
+    </div>
+  </div>
+  <div class="toCenter">
+    <h2>SAGAS</h2>
+    <div id="carouselExampleCaptio" class="carousel slide slider">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="./images/cosmerelogopartenumerodos.jpg" class="d-block w-100" alt="Logo del cosmere">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Cosmere</h5>
+            </div>
+         </div>
+         <div class="carousel-item">
+           <img src="./images/harry_potter.jpg" class="d-block w-100" alt="Logo Harry Potter">
+           <div class="carousel-caption d-none d-md-block">
+             <h5>Harry Potter</h5>
+           </div>
+         </div>
+         <div class="carousel-item">
+         <img src="./images/mundo_disco.jpg" class="d-block w-100" alt="Mundo disco logo">
+         <div class="carousel-caption d-none d-md-block">
+           <h5>Mundo disco</h5>
+         </div>
+       </div>
+              <div class="carousel-item">
+                <img src="./images/sherlok_holmes.jpg" class="d-block w-100" alt="Sherlock Holmes">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Sherlock Holmes</h5>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span></button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptio" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span></button>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <ul>
+          <li>
+            <a href="https://twitter.com/LautaroZambella" target="_blank"
+            ><img src="./images/icono_twitter.png" alt="Mi twitter"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/lautarozambella/" target="_blank"
+            ><img src="./images/icono_instagram.png" alt="Mi instagram"
+            /></a>
+          </li>
+          <li>
+            <a href="https://github.com/LautaroZambella" target="_blank"
+            ><img src="./images/icono_git_hub.png" alt="mi github"
+            /></a>
+          </li>
+        </ul>
+      </footer>
+    </div>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
