need add mixing

--- a/pages/libros.html
+++ b/pages/libros.html
@@ -78,7 +78,7 @@
       </header>
       <main id="libros">
         <div>
-          <a href="../pages/Caminodelosreyes.html"
+          <a href="../pages/caminodelosreyes.html"
             ><img
               src="../images/camino_reyes.JPG"
               alt="Camino de los reyes"
