--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="indexLibro">
            <div>
             <!--witdh:415 height:640-->
-              <a href="./pages/Caminodelosreyes.html"
+              <a href="./pages/caminodelosreyes.html"
               ><img
               src="./images/camino_reyes.JPG"
               alt="Camino de los reyes"
