--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
   </head>
+                 <!-- FIN HEAD -->
   <body>
     <div>
       <header>
@@ -69,6 +70,7 @@
           </ul>
         </div>
       </header>
+                   <!-- FIN HEADER -->
       <section>
         <div class="titulado"><h2>Bienvenidos a LIBROTECA:</h2></div>
         <div class="animadoTexto">
@@ -79,6 +81,7 @@
           <img src="./images/reading_person.png" alt="Dibujo de una persona leyendo" class="animated">
         </div>
       </section>
+                     <!-- FIN SECTION -->
       <main>
           <div class="indexLibro">
            <div>
@@ -225,6 +228,7 @@
           </div>
         </div>
       </main>
+                   <!-- FIN MAIN -->
       <footer>
         <ul>
           <li>
@@ -244,6 +248,7 @@
           </li>
         </ul>
       </footer>
+                  <!-- FIN FOOTER  -->
     </div>
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
