--- a/pages/caminodelosreyes.html
+++ b/pages/caminodelosreyes.html
@@ -31,6 +31,7 @@
       rel="stylesheet"
     />
   </head>
+                <!-- FIN HEAD -->
   <body>
     <div>
       <header>
@@ -76,6 +77,7 @@
         </ul>
       </div>
       </header>
+                 <!-- FIN HEADER -->
       <main id="caminoReyes">
         <div class="infoLibro">
           <img
